@@ -27,6 +27,8 @@ New Features
 
 Improvements
 ---------------------
+* GITHUB#15757: Better skipper-based numeric sort pruning from the start of segments (Alan Woodward)
+
 * GITHUB#15753: Add Case Insensitive makeChar and makeString to Automata. (John Wagster)
 
 Optimizations
